# gdrive-scope-dvc

./: README.md  credentials.json  data.csv.dvc  gdrive.py  pyproject.toml
.dvc/: config
