[tool.poetry]
name = "gdrive-scope-dvc"
version = "0.1.0"
description = "\"\""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
google-api-python-client = "^2.44.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
